--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=RupaKoe
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:J45ueZLQee7gcSB3cqL+/alX/qbDXyrDzVZNcZWA5R0=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
