--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,12 @@
     "settings": {
         "react": {
             "version": "detect"
+        },
+        "import/resolver": {
+            "alias": {
+                "map": [["@", "./resources/js"]],
+                "extensions": [".js", ".jsx", ".json"]
+            }
         }
     }
 }
