--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "concurrently": "^9.0.1",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-import-resolver-alias": "^1.1.2",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react": "^7.34.4",
         "eslint-plugin-react-hooks": "^4.6.2",
